Fixed MANIFEST and pom