@@ -82,38 +82,34 @@
                     <archive>
                         <manifestFile>${project.build.directory}/META-INF/MANIFEST.MF</manifestFile>
                     </archive>
-                    <includes>
-                        <include>com/annadaletech/**/*.*</include>
-                        <include>**/*.properties</include>
-                    </includes>
-					<excludes>
-						<exclude>**/*.clj</exclude>
-					</excludes>
 				</configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.groovy.maven</groupId>
+                <artifactId>gmaven-plugin</artifactId>
+                <version>1.0</version>
                 <executions>
                     <execution>
-                        <id>create-lib</id>
-                        <phase>package</phase>
+                        <phase>generate-resources</phase>
                         <goals>
-                            <goal>jar</goal>
+                            <goal>execute</goal>
                         </goals>
                         <configuration>
-                            <outputDirectory>${project.build.directory}/lib</outputDirectory>
-                            <finalName>${project.artifactId}</finalName>
+                            <properties>
+                                <rawVersion>${pom.version}</rawVersion>
+                            </properties>
+                            <source>
+                                // Convert POM version to valid OSGi version identifier
+                                project.properties['osgi.version'] = (project.properties['rawVersion'] =~ /-/).replaceAll('.')
+                            </source>
                         </configuration>
                     </execution>
                 </executions>
-			</plugin>
-			<plugin>
+            </plugin>
+            <plugin>
 				<groupId>com.theoryinpractise</groupId>
 				<artifactId>clojure-maven-plugin</artifactId>
 				<version>1.3.8</version>
-<!--
-                <configuration>
-                    <clojureOptions>-Xms512m -Xmx512m -XX:MaxPermSize=128M</clojureOptions>
-                    <warnOnReflection>true</warnOnReflection>
-                </configuration>
--->
                 <executions>
                     <execution>
                         <id>test</id>
